--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,10 @@ header ul li a {
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
+
+  /* transition-property: background-color;
+  transition-duration: 1000ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 header .site-nav li a {
@@ -269,7 +273,7 @@ header .site-nav li a.current:after {
   background-image: url(../images/antenna.svg);
   background-color: #f5f4fa;
   border-radius: 4px;
-  background-size: contain;
+  background-size: 70px;
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -280,7 +284,7 @@ header .site-nav li a.current:after {
   background-image: url(../images/clock.svg);
   background-color: #f5f4fa;
   border-radius: 4px;
-  background-size: contain;
+  background-size: 70px;
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -291,7 +295,7 @@ header .site-nav li a.current:after {
   background-image: url(../images/diagram.svg);
   background-color: #f5f4fa;
   border-radius: 4px;
-  background-size: contain;
+  background-size: 70px;
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -302,7 +306,7 @@ header .site-nav li a.current:after {
   background-image: url(../images/astronaut.svg);
   background-color: #f5f4fa;
   border-radius: 4px;
-  background-size: contain;
+  background-size: 70px;
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -328,9 +332,13 @@ header .site-nav li a.current:after {
 /*секция команда*/
 
 .section-icon {
-  max-height: 368px;
+  background-color: #ffffff;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  max-height: 428px;
   max-width: 270px;
   text-align: center;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .section-team .title-dreams {
@@ -343,6 +351,7 @@ header .site-nav li a.current:after {
 }
 
 .team-united {
+  display: block;
   padding-top: 30px;
   padding-bottom: 30px;
 }
@@ -531,6 +540,7 @@ footer address {
 .title-footer {
   margin-bottom: 10px;
   font-weight: 700;
+  font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
   color: #ffffff;
