--- a/css/styles.css
+++ b/css/styles.css
@@ -489,29 +489,44 @@ header .site-nav li a.current::after {
   gap: 30px;
 }
 
-.filters .project li a img .app-text {
+.filters .project li a img {
   display: block;
 }
+
+.project-combined {
+  position: relative;
+  overflow: hidden;
+}
 .project-app-text {
+  display: block;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
   color: #ffffff;
 }
-.app-text {
+.project-app {
   padding: 63px 24px;
   width: 370px;
   height: 294px;
   background-color: rgba(33, 150, 243, 0.9);
 
   position: absolute;
-  top: 37%;
+  opacity: 0;
+  top: 0;
+  left: 0;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.project-combined:hover .app-text {
+.project-combined:hover .project-app
+/* .project-combined:focus .project-app*/ {
   transform: translateY(0);
+  opacity: 1;
+}
+.project-icon:hover,
+.project-icon:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 /*END Проэкт ================================*/
 
