--- a/css/styles.css
+++ b/css/styles.css
@@ -133,10 +133,11 @@ header .contact-nav li a:focus {
   color: #2196f3;
 }
 
-header .contact-nav li a:hover > .icon-header,
-header .contact-nav li a:focus > .icon-header {
+header .contact-nav li a:hover>.icon-header,
+header .contact-nav li a:focus>.icon-header {
   fill: #2196f3;
 }
+
 .icon-header {
   fill: var(--primary-text-color);
   margin-right: 10px;
@@ -164,8 +165,11 @@ header .site-nav li a.current::after {
 /*герой*/
 
 .hero {
-  background-image: -o-linear-gradient(rgba(47, 48, 58, 0.4));
-  background-image: url(../images/hero-title.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/hero-title.jpg);
+
+  /* background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+  background-image: url(../images/hero-title.jpg); */
   background-color: #c4c4c4;
 
   background-position: center;
@@ -179,6 +183,7 @@ header .site-nav li a.current::after {
   padding-top: 200px;
   padding-bottom: 200px;
 }
+
 .hero-title {
   margin-bottom: 30px;
   color: #ffffff;
@@ -233,12 +238,14 @@ header .site-nav li a.current::after {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+
 .filters .visually-btn {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 8px;
 }
+
 /* END кнопки==============================================================*/
 
 /*секции достоинства*/
@@ -257,6 +264,7 @@ header .site-nav li a.current::after {
   text-transform: uppercase;
   margin-top: 20px;
 }
+
 .section-dignity .text {
   color: var(--primary-text-color);
   font-weight: 400;
@@ -266,6 +274,7 @@ header .site-nav li a.current::after {
   max-width: 270px;
   margin-top: 10px;
 }
+
 .section-dignity ul,
 .section-images ul,
 .section-team ul,
@@ -276,6 +285,7 @@ header .site-nav li a.current::after {
   width: 100%;
   gap: 10px;
 }
+
 .section-dignity ul li {
   gap: 30px;
 }
@@ -291,6 +301,7 @@ header .site-nav li a.current::after {
   background-repeat: no-repeat;
   background-position: center;
 }
+
 .dignity-clock::before {
   display: block;
   content: '';
@@ -302,6 +313,7 @@ header .site-nav li a.current::after {
   background-repeat: no-repeat;
   background-position: center;
 }
+
 .dignity-diagram::before {
   display: block;
   content: '';
@@ -313,6 +325,7 @@ header .site-nav li a.current::after {
   background-repeat: no-repeat;
   background-position: center;
 }
+
 .dignity-astronaut::before {
   display: block;
   content: '';
@@ -324,6 +337,7 @@ header .site-nav li a.current::after {
   background-repeat: no-repeat;
   background-position: center;
 }
+
 /* END секции достоинства===============*/
 
 /*секция иконки*/
@@ -331,6 +345,7 @@ header .site-nav li a.current::after {
 .section-images {
   padding-bottom: 94px;
 }
+
 .section-images .title {
   margin-top: 0;
   margin-bottom: 50px;
@@ -352,6 +367,7 @@ header .site-nav li a.current::after {
   text-transform: uppercase;
   color: #ffffff;
 }
+
 .images-title {
   position: relative;
   overflow: hidden;
@@ -397,6 +413,7 @@ header .site-nav li a.current::after {
   padding-top: 30px;
   padding-bottom: 30px;
 }
+
 .section-team .title {
   color: var(--title-text-color);
   font-weight: 500;
@@ -404,6 +421,7 @@ header .site-nav li a.current::after {
   line-height: 1.19;
   letter-spacing: 0.03em;
 }
+
 .section-team .text {
   color: var(--primary-text-color);
   font-weight: 400;
@@ -412,6 +430,7 @@ header .site-nav li a.current::after {
   letter-spacing: 0.03em;
   margin-top: 10px;
 }
+
 .section-team {
   padding-top: 94px;
   padding-bottom: 94px;
@@ -453,6 +472,7 @@ header .site-nav li a.current::after {
   padding-top: 94px;
   padding-bottom: 94px;
 }
+
 .section-clients .title {
   margin-top: 0;
   margin-bottom: 50px;
@@ -463,6 +483,7 @@ header .site-nav li a.current::after {
   text-align: center;
   letter-spacing: 0.03em;
 }
+
 .clients .icon {
   max-width: 170px;
 }
@@ -501,6 +522,7 @@ header .site-nav li a.current::after {
   padding-top: 94px;
   padding-bottom: 94px;
 }
+
 /*.project .container {
   margin-top: 0;
   margin-bottom: 94px;
@@ -512,6 +534,7 @@ header .site-nav li a.current::after {
   line-height: 2;
   letter-spacing: 0.06em;
 }
+
 .project .text {
   color: var(--primary-text-color);
   font-weight: 400;
@@ -520,14 +543,17 @@ header .site-nav li a.current::after {
   letter-spacing: 0.03em;
   padding-top: 4px;
 }
+
 .project-united {
   padding: 20px 24px;
   border: 1px solid #eeeeee;
   overflow: hidden;
 }
+
 .project a {
   text-decoration: none;
 }
+
 .filters .project {
   margin-top: 50px;
   display: flex;
@@ -543,6 +569,7 @@ header .site-nav li a.current::after {
   position: relative;
   overflow: hidden;
 }
+
 .project-app-text {
   display: block;
   font-weight: 400;
@@ -551,6 +578,7 @@ header .site-nav li a.current::after {
   letter-spacing: 0.03em;
   color: #ffffff;
 }
+
 .project-app {
   padding: 63px 24px;
   width: 370px;
@@ -565,16 +593,19 @@ header .site-nav li a.current::after {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .project-icon a:hover .project-app,
 .project-icon a:focus .project-app {
   transform: translateY(0);
   opacity: 1;
 }
+
 .project-icon:hover,
 .project-icon:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
+
 /*END Проэкт ================================*/
 
 /*Футер*/
@@ -582,10 +613,12 @@ header .site-nav li a.current::after {
 footer address {
   font-style: normal;
 }
+
 .page-footer {
   background-color: #2f303a;
   padding: 60px 0;
 }
+
 .logo-footer {
   color: #2196f3;
   font-family: Raleway;
@@ -596,9 +629,11 @@ footer address {
   text-decoration: none;
   margin-bottom: 20px;
 }
+
 .accent-footer {
   color: #ffffff;
 }
+
 .maps {
   font-weight: 400;
   font-size: 14px;
@@ -607,6 +642,7 @@ footer address {
   color: #ffffff;
   text-decoration: none;
 }
+
 .phone-footer {
   font-weight: 400;
   font-size: 14px;
@@ -616,14 +652,17 @@ footer address {
   text-decoration: none;
   /* margin-top: 9px; */
 }
+
 .indent-footer {
   margin-top: 9px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .indent-footer :hover,
 :focus {
   color: #2196f3;
 }
+
 .nav-footer {
   margin-top: 20px;
 }
@@ -636,6 +675,7 @@ footer address {
   text-transform: uppercase;
   color: #ffffff;
 }
+
 .social-footer {
   display: flex;
   justify-content: center;
@@ -674,6 +714,7 @@ footer address {
   justify-content: flex-start;
   gap: 70px;
 }
+
 /* END Футер =====================================*/
 
 /* === Модалка  */
@@ -751,4 +792,66 @@ footer address {
 
 .is-hidden .modal {
   transform: translate(100%);
+}
+
+/*оформление модалки*/
+
+form h2 {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-top: 40px;
+
+  color: #212121;
+}
+
+form {
+  margin-left: 40px;
+  margin-right: 40px;
+}
+
+.form-united {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.form-ucer {
+  margin-top: 12px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: #757575;
+}
+
+.form-input {
+  margin-top: 4px;
+  cursor: pointer;
+  padding: 11px 12px 11px 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: none;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input:focus {
+  border: 1px solid #2196F3;
+}
+
+.form-icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input:focus .form-icon {
+  fill: #2196F3;
+}
+
+textarea {
+  resize: none;
 }
