--- a/css/styles.css
+++ b/css/styles.css
@@ -715,9 +715,53 @@ footer address {
   gap: 70px;
 }
 
+.footer-telegram {
+  width: 570px;
+  height: 86px;
+}
+
+.footer-form {
+  display: flex;
+}
+
+.footer-input {
+  margin-right: 12px;
+  min-width: 358px;
+  background-color: inherit;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  padding: 15px 16px;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-btn {
+  display: flex;
+  align-items: center;
+  max-width: 200px;
+  padding: 10px 29px;
+  background-color: #2196f3;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+
+  cursor: pointer;
+}
+
+.icon-send {
+  fill: currentColor;
+  margin-left: 10px;
+}
+
 /* END Футер =====================================*/
 
-/* === Модалка  */
+/* === Модалка =============== */
 /* .backdrop {
   position: fixed;
   top: 0;
@@ -747,9 +791,10 @@ footer address {
   top: 0;
   width: 100%;
   height: 100%;
+  opacity: 1;
   background-color: rgba(0, 0, 0, 0.2);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition-property: transform, visibility, opacity;
+  transition: opaciti 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  /* transition-property: transform, visibility, opacity; */
 }
 
 .modal {
@@ -788,7 +833,18 @@ footer address {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+/* .btn-close:focus {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+} */
+
+.btn-close:focus .icon-modal {
+  fill: #2196F3;
+
+}
+
 
 .is-hidden .modal {
   transform: translate(100%);
@@ -803,6 +859,7 @@ form h2 {
   text-align: center;
   letter-spacing: 0.03em;
   margin-top: 40px;
+  margin-bottom: 2px;
 
   color: #212121;
 }
@@ -816,11 +873,10 @@ form {
   position: relative;
   display: flex;
   flex-direction: column;
-  margin-bottom: 10px;
 }
 
 .form-ucer {
-  margin-top: 12px;
+  margin-top: 10px;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
@@ -830,6 +886,7 @@ form {
 .form-input {
   margin-top: 4px;
   cursor: pointer;
+  color: #212121;
   padding: 11px 12px 11px 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -843,15 +900,104 @@ form {
 
 .form-icon {
   position: absolute;
-  top: 50%;
+  top: 55%;
   left: 12px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-input:focus .form-icon {
+.form-input:focus+.form-icon {
   fill: #2196F3;
 }
 
 textarea {
   resize: none;
+  width: 100%;
+  height: 120px;
+  cursor: pointer;
+  padding: 12px 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: none;
+  margin-top: 4px;
+  color: #212121;
+
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+textarea:focus {
+  border: 1px solid #2196F3;
+}
+
+textarea::placeholder {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.agreement {
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 30px;
+  margin-top: 20px;
+}
+
+.checkbox-input {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
+}
+
+.checkbox-input:checked+.checkbox {
+  background-image: url(../images/Vector.svg);
+  background-size: cover;
+}
+
+.checkbox {
+  background-size: cover;
+  margin-right: 8px;
+}
+
+.agreement-text {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+
+  color: #757575;
+}
+
+.form-link {
+  color: #2196F3;
+  text-decoration: underline;
+}
+
+.modal-btn {
+  display: block;
+  margin: 0 auto;
+  padding: 10px 55px;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: #fff;
+  background-color: #2196F3;
+
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn:hover,
+.modal-btn:focus {
+  background-color: #188CE8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
